--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
   </style>
   <header class="mb-4 text-center">
-    <img src="C:\Users\Achal Shetty\Desktop\1682591259288.jpeg" alt="Company Logo" class="header-logo">
+    <img src="1682591259288.jpeg" alt="Company Logo" class="header-logo">
   </header>
   <title>Meeting Room Booking</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -256,7 +256,7 @@
             </button>
           </div>
           <div class="modal-body text-center">
-            <img src="C:\Users\Achal Shetty\Desktop\bootstrap-checkmark-icon.png" alt="Tick Mark" class="img-fluid mb-3" style="width: 100px;">
+            <img src="bootstrap-checkmark-icon.png" alt="Tick Mark" class="img-fluid mb-3" style="width: 100px;">
             <p id="confirmationModalMessage"></p>
           </div>
           <div class="modal-footer">
