--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
   </style>
   <header class="mb-4 text-center">
-    <img src="C:\Users\Achal Shetty\Desktop\1682591259288.jpeg" alt="Company Logo" class="header-logo">
+    <img src="1682591259288.jpeg" alt="Company Logo" class="header-logo">
   </header>
   <title>Meeting Room Booking</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -263,7 +263,7 @@
             </button>
           </div>
           <div class="modal-body text-center">
-            <img src="C:\Users\Achal Shetty\Desktop\pngtree-a-basic-vector-of-a-red-cross-icon-with-mark-vector-png-image_12700257.png" alt="Cross Mark" class="img-fluid mb-3" style="width: 100px;">
+            <img src="pngtree-a-basic-vector-of-a-red-cross-icon-with-mark-vector-png-image_12700257.png" alt="Cross Mark" class="img-fluid mb-3" style="width: 100px;">
             <p>Sorry, no meeting rooms are available at the selected timeslot!</p>
           </div>
           <div class="modal-footer">
@@ -284,7 +284,7 @@
             </button>
           </div>
           <div class="modal-body text-center">
-            <img src="C:\Users\Achal Shetty\Desktop\bootstrap-checkmark-icon.png" alt="Tick Mark" class="img-fluid mb-3" style="width: 100px;">
+            <img src="bootstrap-checkmark-icon.png" alt="Tick Mark" class="img-fluid mb-3" style="width: 100px;">
             <p id="confirmationModalMessage"></p>
           </div>
           <div class="modal-footer">
