--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6 p-0">
-                <iframe src="index.html" class="iframe-container"></iframe>
+                <iframe src="main1.html" class="iframe-container"></iframe>
             </div>
             <div class="col-md-6 p-0">
                 <iframe src="indexnew.html" class="iframe-container"></iframe>
